--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -15,6 +15,7 @@
   <script src="js/customModules.js"></script> 
   <link rel="stylesheet" href="css/app.css"> 
   <script src="js/customStateProvider.js"></script> 
+  <link rel="stylesheet" href="css/util.css">
  </head> 
  <body> 
   <div ui-view class="fill"></div> 
@@ -81,11 +82,11 @@
   <script src="plugins/cronapp-framework-js/dist/components/js/format.min.js"></script> 
   <script src="js/system-events.js"></script> 
   <script src="plugins/cronapp-framework-js/dist/components/js/qrcode.js"></script> 
-  <script src="js/dataSourceMap.js"></script>  
-  <script src="plugins/cronapp-lib-js/dist/js/tinymce/plugins/tinymce/tinymce.min.js"></script>
-  <script src="plugins/cronapp-lib-js/dist/js/tinymce/plugins/angular-ui-tinymce/dist/tinymce.min.js"></script>
-  <script src="plugins/cronapp-lib-js/dist/js/kendo-ui/js/kendo.all.fixed.js"></script>
-  <script src="plugins/cronapp-lib-js/dist/js/kendo-ui/js/cultures/kendo.culture.pt-BR.min.js"></script>
-  <script src="plugins/cronapp-lib-js/dist/js/kendo-ui/js/jszip.min.js"></script>
+  <script src="js/dataSourceMap.js"></script> 
+  <script src="plugins/cronapp-lib-js/dist/js/tinymce/plugins/tinymce/tinymce.min.js"></script> 
+  <script src="plugins/cronapp-lib-js/dist/js/tinymce/plugins/angular-ui-tinymce/dist/tinymce.min.js"></script> 
+  <script src="plugins/cronapp-lib-js/dist/js/kendo-ui/js/kendo.all.fixed.js"></script> 
+  <script src="plugins/cronapp-lib-js/dist/js/kendo-ui/js/cultures/kendo.culture.pt-BR.min.js"></script> 
+  <script src="plugins/cronapp-lib-js/dist/js/kendo-ui/js/jszip.min.js"></script>  
  </body>
 </html>
